--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
 # Copy from .env.local on the Vercel dashboard
 # https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
+POSTGRES_URL=postgres://neondb_owner:npg_Nqo0Vmi2zPFK@ep-aged-scene-ac6jejsn-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_Nqo0Vmi2zPFK@ep-aged-scene-ac6jejsn.sa-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_USER=neondb_owner
+POSTGRES_HOST=ep-aged-scene-ac6jejsn-pooler.sa-east-1.aws.neon.tech
+POSTGRES_PASSWORD=npg_Nqo0Vmi2zPFK
+POSTGRES_DATABASE=neondb
 
 # `openssl rand -base64 32`
 AUTH_SECRET=
