--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
+    "vercel": "^41.4.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "bcrypt",
+      "esbuild",
       "sharp"
     ]
   }
