--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "lint": "^0.8.19",
     "next": "15.3.0-canary.13",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
@@ -36,7 +37,11 @@
     "onlyBuiltDependencies": [
       "bcrypt",
       "esbuild",
+      "lint",
       "sharp"
+    ],
+    "ignoredBuiltDependencies": [
+      "lint"
     ]
   }
 }
